Adding temporary changes to Github6

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url ="https://knittala-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai"
-sentiment_analyzer_url="https://sentianalyzer.1x4k1nm78pii.us-south.codeengine.appdomain.cloud/analyze/Fantastic%20services"
+sentiment_analyzer_url="https://sentianalyzer.1x4k1nm78pii.us-south.codeengine.appdomain.cloud/analyze"
